--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "express-async-handler": "^1.1.3",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.11"
   }
 }
