--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -19,6 +18,7 @@
     "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
+    "mongodb": "^3.0.5",
     "mongoose": "^5.0.11"
   }
 }
