--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
     "mongodb": "^3.0.5",
-    "mongoose": "^5.0.11"
+    "mongoose": "^5.0.11",
+    "nodemon": "^1.17.3"
   }
 }
