--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.11",
     "mongoose-beautiful-unique-validation": "^7.1.1",
+    "mongoose-unique-validator": "^2.0.0",
     "mongoose-validator": "^2.0.2",
     "nodemailer": "^4.6.4",
     "nodemon": "^1.17.3"
